# gassolar

./: .flake8  .gitignore  Makefile  README.md  catalog.toml  pyproject.toml  uv.toml.example
.github/workflows/: lint.yml  tests.yml
gassolar/: __init__.py  gassolarlat.py
gassolar/environment/: air_properties.py  print_fits.py  solar_irradiance.py  wind_fit.py  wind_speeds.py
gassolar/fits/jho1polars/: jho1_polarfits.py
gassolar/fits/tailpolars/: naca_cl0fits.py
gassolar/gas/: disp_sens.py  flight_segment.py  flight_state.py  gas.py  gaslat.py  ldratios.py  loiter.py  make_csv.py  mtowendtrade.py  plotting.py  steady_level_flight.py
gassolar/gas/fits/DF70/: fitDF70.py
gassolar/gas/fits/powerlaw/: engine_law.py
gassolar/gas/gas_simple/: endurance.py  gassimple.py  latitude.py
gassolar/jho/: __init__.py  jho.py
gassolar/jho/analysis/: highpay_trade.py  print_perf.py  sens_chart.py
gassolar/jho/documentation/DF35/: fitDF35.py
gassolar/solar/: battlat.py  battsolarcon.py  build_solar.py  contourplots.py  objectivecomp.py  plotting.py  print_sens.py  relaxed_constants.py  season.py  solar.py  solar_interactive.ipynb  solarlat.py  windstruct.py
gassolar/solar/fits/arctan/: arctan_fit.py
gassolar/solar/solar_simple/: contourmap.py  latsweep.py  solarsimple.py
gassolar/solar_detailed/: relaxed_constants.py  solar.py
gassolar/solar_detailed/fits/airfoil/: polarfits.py
tests/: test_catalog.py  test_environment.py  test_gas.py  test_jho.py  test_solar.py  test_solar_detailed.py
