[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "gassolar"
description = "Gas and solar long-endurance aircraft GP/SP models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Beautiful Machines Team" }
]
dependencies = [
    "gpkit-core>=0.2.9",
    "gpkit-models>=0.1.7",
    "numpy",
    "pandas",
]

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}]
lint = [
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.0.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["gassolar"]
exclude = ["gassolar/**/fitting"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
extend-exclude = ["*.ipynb"]  # unreferenced legacy notebook, not maintained package code

[tool.ruff.lint]
extend-select = [
    "I",      # import sorting, replaces isort
    "PL",     # pylint-parity category (convention/error/refactor/warning), stable rules only
    "ARG",    # unused-argument family
    "BLE",    # blind-except (broad-exception-caught)
    "UP032",  # f-string modernization
    "S102",   # exec-used
]
ignore = [
    "E741",     # ambiguous-variable-name: physics notation (same as gpkit-core/gpkit-models)
    "PLR2004",  # magic-value-comparison: noisy, no precedent, revisit later
    "F841",     # unused-variable: Variable() side-effect idiom, spread across 9 files (gassolar#12)
    "PLR0913",  # too-many-arguments: GP setup() methods commonly take many args, spread across 8 files
]

[tool.ruff.lint.per-file-ignores]
"gassolar/solar/windstruct.py" = ["PLC0415"]

[tool.uv.sources]
gpkit-core = { path = "../gpkit-core", editable = true }
gpkit-models = { path = "../gpkit-models", editable = true }
